<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:background="@color/ls_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/head_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/register_label"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_form">

            <TextView
                android:id="@+id/login_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_data_register_label"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp"/>

            <EditText
                android:id="@+id/firstname_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/baseline_accessibility_new_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_firstname_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/login_label"
                tools:layout_editor_absoluteX="30dp"
                android:lines="1"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/lastname_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_accessibility_new_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_lastname_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/firstname_field"
                tools:layout_editor_absoluteX="10dp"
                android:lines="1"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/lastname_field"
                tools:layout_editor_absoluteX="10dp"
                android:lines="1"
                android:imeOptions="actionNext"/>


            <EditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_phone_hint"
                android:imeOptions="actionNext"
                android:minHeight="48dp"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/email_field"
                tools:layout_editor_absoluteX="30dp"
                android:lines="1"/>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_password_hint"
                android:minHeight="48dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/phone_field"
                tools:layout_editor_absoluteX="10dp"
                android:lines="1"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/password_check_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:hint="@string/input_passwordcheck_hint"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/password_field"
                tools:layout_editor_absoluteX="10dp"
                android:lines="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/to_login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/back_button"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:text="@string/register"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>